# wasm-bindgen-rayon

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml
demo/: .gitignore  Cargo.toml  index.html  index.js  rust-toolchain.toml
demo/.cargo/: config.toml
demo/src/: lib.rs
src/: lib.rs  workerHelpers.js  workerHelpers.no-bundler.js
test/: package-lock.json  package.json
test/.cargo/: config.toml
