[package]
name = "wasm-bindgen-rayon"
version = "1.4.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2024"
license = "Apache-2.0"
description = "Adapter for using Rayon-based concurrency on the Web"
keywords = ["web", "thread", "parallel", "concurrency", "webassembly"]
categories = ["concurrency", "wasm", "web-programming"]
readme = "README.md"
exclude = [".github"]
repository = "https://github.com/RReverser/wasm-bindgen-rayon"

[workspace.dependencies]
wasm-bindgen = "0.2.126"
rayon = { version = "1.12", features = ["web_spin_lock"] }

[dependencies]
wasm-bindgen = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = "0.5"
js-sys = "0.3"

[workspace]
members = ["demo", "test"]

[features]
nightly = []
no-bundler = []

[package.metadata.docs.rs]
features = ["nightly"]
targets = ["wasm32-unknown-unknown"]
rustc-args = [
  "-C", "target-feature=+atomics,+bulk-memory",
  "-C", "link-arg=--shared-memory",
  "-C", "link-arg=--max-memory=1073741824",
  "-C", "link-arg=--import-memory",
  "-C", "link-arg=--export=__wasm_init_tls",
  "-C", "link-arg=--export=__tls_size",
  "-C", "link-arg=--export=__tls_align",
  "-C", "link-arg=--export=__tls_base"
]
