[package]
name = "wasm-bindgen-rayon-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.3"
rayon = { version = "1", features = ["web_spin_lock"] }
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Navigator",
  "Element",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlButtonElement",
  "HtmlOutputElement",
] }
js-sys = "0.3"
num-complex = "0.4"
rand = "0.8"
hsl = "0.1"
getrandom = { version = "0.2", features = ["js"] }
