[package]
name = "wasm-bindgen-rayon-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "wasm_bindgen_rayon_demo"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = { path = "..", features = ["no-bundler"] }
rayon = { version = "1", features = ["web_spin_lock"] }
num-complex = "0.4"
rand = "0.8"
hsl = "0.1"
getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Navigator"] }
js-sys = "0.3"
repose-core = "0.20"
repose-ui = "0.20"
repose-material = "0.20"
repose-platform = "0.20"
repose-render-wgpu = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
wgpu = { version = "29", features = ["webgpu", "webgl"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
